--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,37 @@
 asn1crypto==0.24.0
-attrs==17.4.0
-Automat==0.6.0
+attrs==19.3.0
+Automat==20.2.0
+cffi==1.14.0
 chardet==3.0.4
-configobj==5.0.6
+configparser==3.5.0b2
 constantly==15.1.0
-cryptography==2.1.4
-deluge==1.3.15
+cryptography==2.8
+dbus-python==1.2.12
+deluge==2.0.3
+entrypoints==0.3
 enum34==1.1.6
-gunicorn==19.10.0
 gyp==0.1
-hyperlink==17.3.1
-idna==2.6
-incremental==16.10.1
+hyperlink==19.0.0
+idna==2.9
+incremental==17.5.0
 ipaddress==1.0.17
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-pycairo==1.16.2
+keyring==18.0.1
+keyrings.alt==3.1.1
+Mako==1.1.2
+MarkupSafe==1.1.1
+Pillow==6.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
 pycrypto==2.6.1
-pygame==1.9.6
-pygobject==3.26.1
-pyOpenSSL==17.5.0
-python-apt==1.6.4
-python-libtorrent==1.1.5
-python-xlib==0.20
+PyGObject==3.34.0
+PyHamcrest==1.10.1
+pyOpenSSL==19.1.0
 pyxdg==0.25
-service-identity==16.0.0
+rencode==1.0.6
+SecretStorage==2.3.1
+service-identity==18.1.0
 setproctitle==1.1.10
-six==1.11.0
-Twisted==17.9.0
-zope.interface==4.3.2
+six==1.12.0
+Twisted==20.3.0
+zope.interface==5.0.1
