--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,72 @@
+apturl==0.5.2
 asn1crypto==0.24.0
-attrs==19.3.0
-Automat==20.2.0
-cffi==1.14.0
+bcrypt==3.1.6
+blinker==1.4
+Brlapi==0.6.7
+certifi==2018.8.24
 chardet==3.0.4
-configparser==3.5.0b2
-constantly==15.1.0
-cryptography==2.8
+chrome-gnome-shell==0.0.0
+command-not-found==0.3
+cryptography==2.6.1
+cupshelpers==1.0
 dbus-python==1.2.12
-deluge==2.0.3
+defer==1.0.6
+distro==1.3.0
+distro-info===0.21ubuntu4
+duplicity==0.8.4
 entrypoints==0.3
-enum34==1.1.6
-gyp==0.1
-hyperlink==19.0.0
-idna==2.9
-incremental==17.5.0
-ipaddress==1.0.17
+fasteners==0.12.0
+future==0.16.0
+httplib2==0.11.3
+idna==2.6
 keyring==18.0.1
 keyrings.alt==3.1.1
-Mako==1.1.2
-MarkupSafe==1.1.1
-pgmagick==0.7.4
-Pillow==6.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
+language-selector==0.1
+launchpadlib==1.10.7
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lockfile==0.12.2
+louis==3.10.0
+macaroonbakery==1.2.3
+Mako==1.0.7
+MarkupSafe==1.1.0
+monotonic==1.5
+netifaces==0.10.4
+oauthlib==2.1.0
+olefile==0.46
+paramiko==2.6.0
+pexpect==4.6.0
+Pillow==6.1.0
+protobuf==3.6.1
+psutil==5.5.1
+pycairo==1.16.2
 pycrypto==2.6.1
+pycups==1.9.73
 PyGObject==3.34.0
-PyHamcrest==1.10.1
-pyOpenSSL==19.1.0
+PyJWT==1.7.0
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyRFC3339==1.1
+python-apt==1.9.0+ubuntu1.3
+python-dateutil==2.7.3
+python-debian==0.1.36
+pytz==2019.2
+pyudev==0.21.0
 pyxdg==0.25
-rencode==1.0.6
+PyYAML==5.1.2
+reportlab==3.5.23
+requests==2.21.0
+requests-unixsocket==0.1.5
 SecretStorage==2.3.1
-service-identity==18.1.0
-setproctitle==1.1.10
+simplejson==3.16.0
 six==1.12.0
-Twisted==20.3.0
-zope.interface==5.0.1
+system-service==0.3
+systemd-python==234
+ubuntu-advantage-tools==19.5
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.24.1
+usb-creator==0.3.7
+wadllib==1.3.3
+xkit==0.0.0
