--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,50 @@
-apturl==0.5.2
 asn1crypto==0.24.0
-bcrypt==3.1.6
-blinker==1.4
-Brlapi==0.6.7
-certifi==2018.8.24
+attrs==19.3.0
+Automat==20.2.0
+backports.functools-lru-cache==1.6.1
+beautifulsoup4==4.8.2
+certifi==2019.11.28
+cffi==1.14.0
 chardet==3.0.4
-chrome-gnome-shell==0.0.0
-command-not-found==0.3
-cryptography==2.6.1
-cupshelpers==1.0
+click==7.1.1
+configparser==3.5.0b2
+constantly==15.1.0
+cryptography==2.8
 dbus-python==1.2.12
-defer==1.0.6
-distro==1.3.0
-distro-info===0.21ubuntu4
-duplicity==0.8.4
+deluge==2.0.3
 entrypoints==0.3
-fasteners==0.12.0
-future==0.16.0
-httplib2==0.11.3
-idna==2.6
+enum34==1.1.6
+Flask==1.1.1
+gunicorn==19.10.0
+gyp==0.1
+hyperlink==19.0.0
+idna==2.9
+incremental==17.5.0
+ipaddress==1.0.17
+itsdangerous==1.1.0
+Jinja2==2.11.1
 keyring==18.0.1
 keyrings.alt==3.1.1
-language-selector==0.1
-launchpadlib==1.10.7
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lockfile==0.12.2
-louis==3.10.0
-macaroonbakery==1.2.3
-Mako==1.0.7
-MarkupSafe==1.1.0
-monotonic==1.5
-netifaces==0.10.4
-oauthlib==2.1.0
-olefile==0.46
-paramiko==2.6.0
-pexpect==4.6.0
-Pillow==6.1.0
-protobuf==3.6.1
-psutil==5.5.1
-pycairo==1.16.2
+Mako==1.1.2
+MarkupSafe==1.1.1
+pgmagick==0.7.4
+Pillow==6.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
 pycrypto==2.6.1
-pycups==1.9.73
 PyGObject==3.34.0
-PyJWT==1.7.0
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyRFC3339==1.1
-python-apt==1.9.0+ubuntu1.3
-python-dateutil==2.7.3
-python-debian==0.1.36
-pytz==2019.2
-pyudev==0.21.0
+PyHamcrest==1.10.1
+pyOpenSSL==19.1.0
 pyxdg==0.25
-PyYAML==5.1.2
-reportlab==3.5.23
-requests==2.21.0
-requests-unixsocket==0.1.5
+rencode==1.0.6
+requests==2.23.0
 SecretStorage==2.3.1
-simplejson==3.16.0
+service-identity==18.1.0
+setproctitle==1.1.10
 six==1.12.0
-system-service==0.3
-systemd-python==234
-ubuntu-advantage-tools==19.5
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.24.1
-usb-creator==0.3.7
-wadllib==1.3.3
-xkit==0.0.0
+soupsieve==1.9.5
+Twisted==20.3.0
+urllib3==1.25.8
+Werkzeug==1.0.0
+zope.interface==5.0.1
