--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,22 @@
-asn1crypto==0.24.0
-attrs==19.3.0
-Automat==20.2.0
-backports.functools-lru-cache==1.6.1
 beautifulsoup4==4.8.2
 certifi==2019.11.28
-cffi==1.14.0
 chardet==3.0.4
 click==7.1.1
-configparser==3.5.0b2
-constantly==15.1.0
-cryptography==2.8
-deluge==2.0.3
-entrypoints==0.3
-enum34==1.1.6
 Flask==1.1.1
-gunicorn==19.10.0
-hyperlink==19.0.0
+get==2019.4.13
+html5lib==1.0.1
 idna==2.9
-incremental==17.5.0
-ipaddress==1.0.17
 itsdangerous==1.1.0
 Jinja2==2.11.1
-keyring==18.0.1
-keyrings.alt==3.1.1
-Mako==1.1.2
+lxml==4.5.0
 MarkupSafe==1.1.1
-Pillow==6.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pycrypto==2.6.1
-PyGObject==3.34.0
-PyHamcrest==1.10.1
-pyOpenSSL==19.1.0
-pyxdg==0.25
-rencode==1.0.6
+post==2019.4.13
+public==2019.4.13
+query-string==2019.4.13
+request==2019.4.13
 requests==2.23.0
-SecretStorage==2.3.1
-service-identity==18.1.0
-setproctitle==1.1.10
-six==1.12.0
-soupsieve==1.9.5
-Twisted==20.3.0
+six==1.14.0
+soupsieve==2.0
 urllib3==1.25.8
+webencodings==0.5.1
 Werkzeug==1.0.0
-zope.interface==5.0.1
